# ArtificialLife

./: .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain-arm.cmake
include/: creature.h  draw.h  physics.h
src/: creature.c  draw.c  main.c  physics.c
src/baremetal/: linker.ld  main.c  startup.c
src/desktop/: main.c
src/physics/: draw.c  physics.c
